intended v0.1.1
+ Add dom.exposeGlobals()
+ Add a bunch more tags - P, H1-H4
+ implement dom.waitForImage
+ implement Component#remove

v0.1.0
+ implement ui.dom